Tests/CompilerTests/negative/missing-parameter-ascription.expected
negative/missing-parameter-ascription.hylo:3.7-8: error: parameter declaration requires an ascription
fun f(x) {}
      ^
